# -------------------------
#
# Cwago.
#
# cwago/cwago_comp/Cargo.toml
# (C) 2023 CwagoCommunity.
#
# cwago_compの設定です。
# =========================

[package]
name = "cwago_comp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
cwago_utility = {path = "../cwago_utility"}
serde = "1.0.152"
erased-serde = "0.3.24"
env_logger = "0.10.0"