# --------------------
#
# Cwago.
#
# cwago/cwago_ecs/Cargo.toml
# (C) 2022 Taichi Ito.
# ====================

# cwago_ecs クレートのCargo.tomlです。

[package]
name = "cwago_ecs"
version = "1.0.0"
authors = ["Taichi Ito."]
edition = "2021"

[lib]
create-type = ["rlib"]

[dependencies]
cwago_utility = { path = "../cwago_utility" }