# -------------------------
#
# Cwago.
#
# cwago/cwago_utility/Cargo.toml
# (C) 2022 CwagoCommunity.
#
# cwago_utilityの設定です。
# =========================

[package]
name = "cwago_utility"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
log = "0.4.7"
env_logger = "0.10.0"